# tongzhou

./: .gitignore  COMPATIBILITY.md  DATABASE_MIGRATION.md  DOCKER.md  Dockerfile  FULL_SYSTEM_CHECK.md  PRODUCTION_CHECKLIST.md  README.md  SECURITY_CHECK.md  check-compatibility.sh  docker-compose.yml  install.bat  install.sh
backend/: .env.example  COOKIES_GUIDE.md  DEPLOY_LINUX.md  Dockerfile  api_config.yaml  deep_debug.py  douyin_item_info.json  download_with_browser.py  main.py  pyproject.toml  requirements.prod.txt  requirements.txt  save_page.py  setup.py  share_page_item.json  清理下载文件.bat
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/endpoints/: admin.py  health.py  presets.py  sheets.py  video_records.py
backend/app/core/: config.py  lifespan.py  logging.py
backend/app/integrations/: browser_downloader.py  douyin_client.py  yt_dlp_client.py
backend/app/repositories/: db.py  migrations.py
backend/app/schemas/: video_record.py
backend/app/services/: compression_queue.py  gemini_video_analyzer.py  video_compressor.py
backend/app/utils/: url_extractor.py
frontend/: admin.html  table-new.html
